<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eerie_black"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:text="123456789"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_clear"
        android:paddingVertical="20dp"
        android:textAlignment="viewEnd"
/>
    <!-- row 1 -->
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/seven"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_neg"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        />
    <Button
        android:id="@+id/btn_neg"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/posPerNeg"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn_clear"
        app:layout_constraintRight_toLeftOf="@id/btn_percent"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        />
    <Button
        android:id="@+id/btn_percent"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/percent"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/btn_neg"
        app:layout_constraintRight_toLeftOf="@id/btn_division"
        app:layout_constraintBottom_toTopOf="@id/btn_9"

        />
    <Button
        android:id="@+id/btn_division"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/vivid_gamboge"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_percent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_multiplication"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <!-- row 2 -->

    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/seven"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_8"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        />
    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/eight"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_7"
        app:layout_constraintRight_toLeftOf="@id/btn_9"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        />
    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/nine"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_8"
        app:layout_constraintRight_toLeftOf="@id/btn_multiplication"
        app:layout_constraintBottom_toTopOf="@id/btn_6"

        />
    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/vivid_gamboge"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <!-- row 3 -->
    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/four"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_5"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        />
    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/five"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_4"
        app:layout_constraintRight_toLeftOf="@id/btn_6"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        />
    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/six"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_5"
        app:layout_constraintRight_toLeftOf="@id/btn_minus"
        app:layout_constraintBottom_toTopOf="@id/btn_3"

        />
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/vivid_gamboge"
        android:text="@string/minus"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <!-- row 4 -->
    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/one"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_2"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        />
    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/two"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_1"
        app:layout_constraintRight_toLeftOf="@id/btn_3"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        />
    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/three"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_2"
        app:layout_constraintRight_toLeftOf="@id/btn_plus"
        app:layout_constraintBottom_toTopOf="@id/btn_comma"

        />
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/vivid_gamboge"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_equal"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

<!-- row 5 -->
    <Button
        app:layout_constraintHorizontal_chainStyle="spread"

        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/zero"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_comma"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <Button
        android:id="@+id/btn_comma"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/dark_liver"
        android:text="@string/comma"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btn_0"
        app:layout_constraintRight_toLeftOf="@id/btn_equal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <Button
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/vivid_gamboge"
        android:text="@string/equal"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/btn_comma"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>